# zenclaw

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy-web.yml
agent/: Cargo.toml  bindings.h  build.rs  justfile  partitions.csv  rust-toolchain.toml  sdkconfig.board.guition-p4  sdkconfig.defaults
agent-desktop/src/: config.rs
agent-desktop/src/core/: gateway.rs  mod.rs
agent-desktop/src/core/memory/: mod.rs
agent-desktop/src/core/tools/: gateway_tool.rs  mcp_tools.rs  memory_tools.rs
agent-esp32/: .gitignore  Cargo.toml  bindings_led_strip.h  bindings_usb_msc.h  justfile  sdkconfig.board.devkitc  sdkconfig.board.sdcard  sdkconfig.defaults
agent-esp32-smoke/: Cargo.toml  README.md  bindings.h  justfile  partitions.csv  rust-toolchain.toml  sdkconfig.defaults
agent-esp32-smoke/.cargo/: config.toml
agent-esp32-smoke/boards/: guition-p4.toml
agent-esp32-smoke/bootloaders/: README.md
agent-esp32-smoke/scripts/: board-env.sh
agent-esp32-smoke/src/: main.rs
agent-esp32/.cargo/: config.toml
agent-esp32/boards/: devkitc.toml  sdcard.toml
agent-esp32/bootloaders/: README.md
agent-esp32/src/: config.rs  led_status.rs  lib.rs  main.rs  usb_storage.rs
agent-esp32/src/core/: agent_loop.rs  compaction.rs  cron.rs  gateway.rs  mod.rs  prompt.rs  runner.rs  telegram.rs  types.rs  workspace.rs
agent-esp32/src/core/background/: mod.rs
agent-esp32/src/core/channels/: mod.rs
agent-esp32/src/core/cloud/: client.rs  mod.rs  sigv4.rs
agent-esp32/src/core/memory/: mod.rs
agent-esp32/src/core/sessions/: mod.rs
agent-esp32/src/core/tools/: cron_tools.rs  file_tools.rs  gsheets_tools.rs  memory_tools.rs  mod.rs  session_tools.rs  storage_tools.rs  subagent_tools.rs  web_tools.rs
agent-esp32/src/desktop/: mod.rs  run.rs  server.rs
agent-esp32/src/esp32/: runner.rs
agent-esp32/src/net/: eth.rs  mod.rs  wifi.rs
agent-esp32/tests/: test_tools_e2e.sh
agent-smoke/: Cargo.toml  bindings.h  build.rs
agent-smoke/.cargo/: config.toml
agent-smoke/src/: main.rs
agent/boards/: devkitc.toml  guition-p4.toml
agent/bootloaders/: README.md
agent/components/zenclaw_sd/: CMakeLists.txt  zenclaw_sd.c
agent/components/zenclaw_sd/include/: zenclaw_sd.h
agent/scripts/: board-env.sh
agent/src/: config.rs  led_status.rs  lib.rs  main.rs  main_esp32_test.rs  sdcard.rs
agent/src/core/: agent_loop.rs  chat_events.rs  commands.rs  compaction.rs  cron.rs  gateway.rs  mod.rs  prompt.rs  runner.rs  subagents.rs  title_gen.rs  tool_loop.rs  tool_recovery.rs  types.rs  workspace.rs
agent/src/core/background/: mod.rs
agent/src/core/channels/: markdown_html.rs  mod.rs  telegram.rs
agent/src/core/cloud/: boot.rs  cache.rs  client.rs  mod.rs  replicator.rs  sigv4.rs  snapshots.rs  strict.rs
agent/src/core/memory/: mod.rs
agent/src/core/sessions/: meta.rs  mod.rs
agent/src/core/tools/: cron_tools.rs  memory_tools.rs  message_tool.rs  mod.rs  session_tools.rs  storage_tools.rs  subagent_tools.rs  web_tools.rs
agent/src/desktop/: host_facts.rs  http_client.rs  memstat.rs  mod.rs  run.rs  server.rs  subagents.rs
agent/src/esp32/: http_client.rs  mod.rs  runner.rs
agent/src/net/: eth.rs  mod.rs  wifi_ui.rs
agent/src/platform/: http_client.rs  http_server.rs  mod.rs  runtime.rs
docs/: NVS-GENERATION.md  PROMOTION.md
docs/plans/: 2026-04-08-web-help-system-design.md  2026-04-08-web-help-system.md  2026-04-10-large-file-support-design.md  2026-04-10-large-file-support-plan.md
docs/superpowers/plans/: 2026-03-31-web-ui.md  2026-04-29-esp32p4-port.md  2026-04-29-rust-provisioning-pivot.md  2026-05-01-telegram-unification.md  2026-05-02-cloud-persistence.md  2026-05-02-model-presets-fast-dial.md  2026-05-03-slash-commands.md  2026-05-05-multi-conversations.md  2026-06-08-telegram-markdown-rendering.md
docs/superpowers/playbooks/: multi-conversations-e2e.md
docs/superpowers/specs/: 2026-03-31-web-ui-design.md  2026-04-11-rust-agent-design.md  2026-04-29-esp32p4-port-design.md  2026-04-29-rust-provisioning-pivot-design.md  2026-05-01-esp32-chat-broken-postmortem.md  2026-05-01-streaming-chat-events-design.md  2026-05-01-streaming-chat-events-handover.md  2026-05-01-telegram-unification-design.md  2026-05-02-cloud-persistence-design.md  2026-05-02-model-presets-fast-dial-design.md  2026-05-03-slash-commands-design.md  2026-05-03-stats-transport-model.md  2026-05-05-multi-conversations-design.md  2026-06-08-telegram-markdown-rendering-design.md
scripts/: build-firmware-image.sh  build-rust-firmware.sh  deploy-test.sh  synthetic-session.py
web/: README.md  nuxt.config.ts  package-lock.json  package.json
web/app/: app.config.ts  app.vue
web/app/components/: AppFooter.vue  ConnectionBanner.vue  HelpDrawer.vue  MemoryCard.vue  MemoryEditor.vue  SessionsSidebar.vue  WelcomeLanding.vue
web/app/components/help/: HelpChat.vue  HelpConfig.vue  HelpDashboard.vue  HelpFiles.vue  HelpLogs.vue  HelpProvision.vue  HelpTelegram.vue
web/app/composables/: useConnection.ts  useSerial.ts  useSessions.ts
web/app/layouts/: chat.vue
web/app/pages/: chat.vue  config.vue  dashboard.vue  files.vue  index.vue  logs.vue  memory.vue  provision.vue
web/app/pages/chat/: [id].vue  index.vue
web/app/types/: connection.ts  firmware.ts
web/app/utils/: memory.ts  nvs.ts
web/public/: manifest.json
web/public/firmware/: README.md  firmware.json
