[package]
name = "zenclaw-smoke-p4"
version = "0.1.0"
edition = "2021"

[dependencies]
# 0.52+ required for ESP32-P4 support (esp-idf-hal 0.46+ has Core::Core1, hys_ctrl_mode GPIO field, etc.)
esp-idf-svc = "0.52"
embedded-svc = "0.29"
log = "0.4"
anyhow = "1"

[build-dependencies]
embuild = "0.33"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[[package.metadata.espflash.partition_table]]
file = "partitions.csv"
