[package]
name = "zenclaw-agent"
version = "0.1.0"
edition = "2021"

[features]
default = ["desktop"]
desktop = ["tokio", "axum", "reqwest", "tower-http", "reqwest-eventsource", "tokio-util", "futures", "genai"]
esp32 = []
hnsw = ["usearch"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"

# Desktop dependencies
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.8", features = ["ws"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
reqwest-eventsource = { version = "0.6", optional = true }
# teloxide removed — our Telegram poller uses raw reqwest HTTP calls instead
# teloxide = { version = "0.17", features = ["macros"], optional = true }
tokio-util = { version = "0.7", optional = true }
futures = { version = "0.3", optional = true }

# Optional
usearch = { version = "2", optional = true }
genai = { version = "0.6.0-beta", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
