[package]
name = "zenclaw-agent"
version = "0.2.0"
edition = "2021"

[features]
default = ["esp32", "nic-wifi-internal"]
desktop = ["dep:teloxide", "dep:reqwest-eventsource", "dep:reqwest", "dep:genai", "dep:hostname", "dep:tokio", "dep:axum", "dep:tower-http", "dep:tokio-util"]
esp32 = ["dep:esp-idf-svc", "dep:embedded-svc"]

# NIC drivers — chosen per board manifest
nic-wifi-internal = ["esp32"]   # S3/S2 native WiFi via EspWifi
nic-wifi-hosted   = ["esp32"]   # WiFi via esp_hosted (C6/C5) — v2
nic-eth           = ["esp32"]   # Internal EMAC + external PHY (P4)

usb_storage = ["esp32"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
heapless = "0.9"
futures = { version = "0.3" }

# Desktop-only: tokio runtime, axum HTTP server
tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "macros", "time", "fs", "signal", "process"], optional = true }
axum = { version = "0.8", features = ["json", "ws"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tokio-util = { version = "0.7", optional = true }

# Desktop-only: reqwest + genai (TLS backends don't support Xtensa)
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
genai = { version = "=0.6.0-beta.18", optional = true }

# ESP32
esp-idf-svc = { version = "0.52", optional = true }
embedded-svc = { version = "0.29", optional = true }

# Desktop-only
teloxide = { version = "0.17", features = ["macros"], optional = true }
reqwest-eventsource = { version = "0.6", optional = true }
hostname = { version = "0.4", optional = true }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[[package.metadata.espflash.partition_table]]
file = "partitions.csv"

# ESP-IDF managed components (pulled via component manager)
# Top-level bindings extension: pulls esp_chip_info.h so we can detect the
# actual chip model at runtime (ESP32-S3 vs ESP32-P4 vs …) for /api/status
# and the landing page.
[[package.metadata.esp-idf-sys.extra_components]]
bindings_header = "bindings.h"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.2" }

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/usb_host_msc", version = "1.2.0" }
bindings_header = "bindings_usb_msc.h"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/led_strip", version = "2" }
bindings_header = "bindings_led_strip.h"
